# web-api-test-intuitive

./: .gitignore  README.md  api-test-intuitive.postman_collection.json  pyproject.toml
src/backend/: app.py  config.py  execeptions.py  utils.py
src/backend/controller/: __init__.py  blueprint.py  route.py
src/frontend/: index.html
